--- a/package.json
+++ b/package.json
@@ -72,7 +72,9 @@
     "eslint": "^9.32.0",
     "eslint-config-next": "^15.5.6",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^15.14.0",
     "postcss": "^8.5.6",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.20.0"
   }
 }
