--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^12.6.0",
     "input-otp": "^1.4.2",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.462.0",
     "next": "^15.5.6",
     "next-themes": "^0.3.0",
@@ -65,6 +67,7 @@
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^22.16.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
