--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "next dev",
+    "dev:clean": "rm -rf .next && next dev",
+    "dev:fresh": "rm -rf .next node_modules/.cache && next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "verify-env": "node verify-nextjs-env.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -73,6 +76,7 @@
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "autoprefixer": "^10.4.21",
+    "dotenv": "^17.2.3",
     "eslint": "^9.32.0",
     "eslint-config-next": "^15.5.6",
     "eslint-plugin-react-hooks": "^5.2.0",
