--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
-    "verify-env": "node verify-nextjs-env.js"
+    "verify-env": "node verify-nextjs-env.js",
+    "delete-collections": "tsx scripts/delete-all-collections-except-users.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -52,6 +53,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^12.6.0",
+    "firebase-admin": "^13.0.1",
     "input-otp": "^1.4.2",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
@@ -85,6 +87,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^15.14.0",
     "postcss": "^8.5.6",
+    "tsx": "^4.21.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.20.0"
   }
